<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Jokes</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- Buttons -->
    <string name="edit_button">Edit</string>
    <string name="favorites_button">Favorites</string>
    <string name="profile_button">Profile</string>
    <string name="search_button">Search</string>
    <string name="create_joke_button">Create Joke</string>
    <string name="sign_up_button">Sign up</string>
    <string name="log_in_button">Log in</string>

    <!-- Profile layout -->
    <string name="profile_name">Name:</string>
    <string name="profile_password">Password</string>

    <!-- Joke list layout -->
    <string name="joke_list_title">Most recent jokes:</string>

    <!-- Favorite list layout -->
    <string name="favorite_list_title">Your favorite jokes:</string>

    <!-- Joke layout -->
    <string name="joke_name">Name:</string>
    <string name="joke_author">Author:</string>

    <!-- Create joke layout -->
    <string name="joke_content">Content:</string>

    <!-- Search bar -->
    <string name="search_hint">Search Jokes</string>
    <string name="app_label">Jokes</string>
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_activity_favorites">FavoritesActivity</string>
    <string name="title_activity_home">HomeActivity</string>

</resources>
