<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
    	<TextView 
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/profile_name"/>
        
    	<TextView 
    	    android:id="@+id/profile_name"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"/>
    	
    	<Button
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:text="@string/edit_button"
    	    android:onClick="editName"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
    	<TextView 
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/profile_password"/>
        
    	<TextView 
    	    android:id="@+id/profile_password"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"/>
    	
    	<Button
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:text="@string/edit_button"
    	    android:onClick="editPassword"/>
    </LinearLayout>

</LinearLayout>
